--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 		<div class="content">
 			<h4><strong>Gambit Sports - Software Development Engineer (June 2019 to Present)</strong></h4>
 			<p>Working on Nostra Pro App.</p>
-			<p>- Developed voucher code functionality with different vendors like Flipkart, PhonePe, Dunzo and Myntra.</p>
+			<p>- Developed voucher code functionality with different vendors like Flipkart, PhonePe, Dunzo, and Myntra.</p>
 			<p>- Worked on different payment gateways including Paytm, Cashfree, PhonePe</p>
 			<p>- Increased Debit Card success rate from 62% to 90%. </p>
-			<p>- Created a dynamic payment gateway system and routed traffic from it depending on the card type, bank type and availability of payment gateway. <p>
-			<p>- Created an affiliate system with different scopes like spend commission, referral commission, deposit commission. <p>
-			<p>- Created Automatic payout withdrawal system with fraud check algorithm. </p>
-			<p>- Integrated new sports in existing system. </p>
-			<p>- Created different SQS queues for handling performance and transactions issues.</p>
+			<p>- Created a dynamic payment gateway system and routed traffic from it depending on the card type, bank type, and availability of payment gateway.</p>
+			<p>- Created an affiliate system with different scopes like spend commission, referral commission, deposit commission.</p>
+			<p>- Created an Automatic payout withdrawal system with a fraud check algorithm. </p>
+			<p>- Integrated new sports in the existing system. </p>
+			<p>- Created different SQS queues for handling performance and transaction issues.</p>
 		</div>
 		<div class="content">
 			<h4><strong>Simform Solutions - Full Stack Developer (June 2017 to June 2019)</strong></h4>
