Add new project
Clickable phone and email text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<div class="content">
 			<ul id="contact">
 				<li>
-					<img src="image/email.png"><span>sohamdodia@gmail.com</span>
+					<img src="image/email.png"><span><a href="mailto:sohamdodia@gmail.com">sohamdodia@gmail.com</a></span>
 				</li>
 				<li>
-					<img src="image/phone.png"><span>+91-9978323246</span>
+					<img src="image/phone.png"><span><a href="tel:+919978323246">+91-9978323246</a></span>
 				</li>
 				<li>
 					<img src="image/github.png"><span><a href="https://github.com/sohamdodia" target="_blank">sohamdodia</a></span>
@@ -37,11 +37,6 @@
 				<h4>Babaria Institute of Technology, Varnama, Vadodara</h4>
 				<p>B.E. Computer Science and Engineering 2017</p>
 				<p>CGPA: 8.61</p>
-			</div>
-			<div class="inline width-40">
-				<h4>Sett R.J.J. High School, Valsad</h4>
-				<p>HSC (GHSEB, 2013): 64.5%</p>
-				<p>SSC (GSEB, 2011): 88%</p>
 			</div>
 		</div>
 	</div>
@@ -95,9 +90,9 @@
 				<p><a href="https://www.npmjs.com/package/dynamodb-to-elasticsearch">https://www.npmjs.com/package/dynamodb-to-elasticsearch</a></p>
 			</div>
 			<div class="project">
-				<h4>Product APIs [Go lang, MongoDB]</h4>
-				<p>Product APIs with authentication written in GO lang and MongoDB</p>
-				<p><a href="https://github.com/sohamdodia/product-api-golang">https://github.com/sohamdodia/product-api-golang</a></p>
+				<h4>Redis Process Lock</h4>
+				<p>An NPM module that will lock the process. JavaScript is single-threaded, and if there is any requirement for locking some process/resource, it will be complex to do that. This module will solve that problem.</p>
+				<p><a href="https://www.npmjs.com/package/redis-process-lock">https://www.npmjs.com/package/redis-process-lock</a></p>
 			</div>
 			<div class="project">
 				<h4>Custom Search [Python]</h4>
@@ -111,7 +106,7 @@
 			</div>
 			<div class="project">
 				<h4>Other Projects</h4>
-				<p><b>portfolio-website</b>[HTML, CSS] , <b>Timetable</b> [Materialize CSS, Cordova], <b>Weather API</b> [Node.js], <b>RuralFuse</b> [Laravel, HTML, CSS, JavaScript], <b>Itinerate</b> [Google Maps API, JavaScript, HTML, CSS], <b>Chopper Rush</b> [Android], <b>Paper App</b> [Android], <b>PortFolio Website</b> [HTML, Materialize CSS, Javascript, jQuery]</p>
+				<p><b>Portfolio Website</b> [HTML, CSS], <b>Timetable</b> [Materialize CSS, Cordova], <b>Weather API</b> [Node.js],<b>Chopper Rush</b> [Android], <b>Paper App</b> [Android]</p>
 			</div>
 		</div>
 	</div>
