--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
 	</div>
 
 	<div class="section">
+		<h2 class="title">Certifications</h2>
+		<div class="hr"></div>
+		<div class="content">
+			<h4>AWS Certified Solutions Architect - Associate (22 August 2020 - 22 August 2023)</h4>
+			<p>Credentials: <a href="https://www.youracclaim.com/badges/81dd30c3-0389-4052-b842-cc379934ed4f">https://www.youracclaim.com/badges/81dd30c3-0389-4052-b842-cc379934ed4f</a></p>
+		</div>
+	</div>
+
+
+	<div class="section">
 		<h2 class="title">Experience</h2>
 		<div class="hr"></div>
 		<div class="content">
