Add clipboard health job description

--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
 		<h2 class="title">Experience</h2>
 		<div class="hr"></div>
 		<div class="content">
-			<h4><strong>Gambit Sports - Software Development Engineer (June 2019 to Present)</strong></h4>
-			<p>Working on Nostra Pro App.</p>
+			<h4><strong>Clipboard Health - Senior Software Developer (Dec 2020 to Present)</strong></h4>
+			<p>Working Clipboard Health Website</p>
+			<p>- Worked on shift verification tool</p>
+			<p>- Created an in-house software for sending and receiving SMS and Emails</p>
+			<p>- Created tool for bulk shift creation</p>
+		</div>
+		<div class="content">
+			<h4><strong>Gambit Sports - Software Development Engineer (June 2019 to Dec 2020)</strong></h4>
+			<p>Worked on Nostra Pro App.</p>
 			<p>- Developed voucher code functionality with different vendors like Flipkart, PhonePe, Dunzo, and Myntra.</p>
 			<p>- Worked on different payment gateways including Paytm, Cashfree, PhonePe</p>
 			<p>- Increased Debit Card success rate from 62% to 90%. </p>
@@ -104,6 +111,7 @@
 				<p>An NPM module that will lock the process. JavaScript is single-threaded, and if there is any requirement for locking some process/resource, it will be complex to do that. This module will solve that problem.</p>
 				<p><a href="https://www.npmjs.com/package/redis-process-lock">https://www.npmjs.com/package/redis-process-lock</a></p>
 			</div>
+			<br />
 			<div class="project">
 				<h4>Custom Search [Python]</h4>
 				<p>Custom Search will give you first result from google,twitter and duckduckgo in one second.You can pass query in url.</p>
@@ -125,6 +133,7 @@
 		<h2 class="title">Achievements and Activities</h2>
 		<div class="hr"></div>
 		<div class="content">
+			<p>1st prize in Clipboard Health Hackathon</p>
 			<p>1st prize in Hardware category by hackster.io at InOut 3.0 for LeapDrop.
 			<p>3rd Prize in Android workshop.</p>
 			<p>Participated in Hackathons : InOut 1.0, InOut 2.0, InOut 3.0.</p>
