--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<img src="image/email.png"><span><a href="mailto:sohamdodia@gmail.com">sohamdodia@gmail.com</a></span>
 				</li>
 				<li>
-					<img src="image/phone.png"><span><a href="tel:+919978323246">+91-9978323246</a></span>
+					<img src="image/phone.png"><span><a href="tel:+919978323246">+61-0483843375</a></span>
 				</li>
 				<li>
 					<img src="image/github.png"><span><a href="https://github.com/sohamdodia" target="_blank">sohamdodia</a></span>
@@ -45,8 +45,8 @@
 		<h2 class="title">Skills</h2>
 		<div class="hr"></div>
 		<div class="content">
-			<p><strong>Languages:</strong> HTML, CSS, JavaScript, MySQL, MongoDB, GO Lang, PostgreSQL</p>
-			<p><strong>Frameworks/Tools:</strong>  Node.js, React.js, Express.js, AWS, Mongoose, Sails.js, Docker</p>
+			<p><strong>Languages:</strong> HTML, CSS, JavaScript, TypeScript, MySQL, MongoDB, GO Lang, PostgreSQL</p>
+			<p><strong>Frameworks/Tools:</strong>  Node.js, React.js, Express.js, AWS, Mongoose, Sails.js, Docker, Nest.js</p>
 		</div>
 	</div>
 
@@ -64,14 +64,22 @@
 		<h2 class="title">Experience</h2>
 		<div class="hr"></div>
 		<div class="content">
-			<h4><strong>Clipboard Health - Senior Software Developer (Dec 2020 to Present)</strong></h4>
-			<p>Working Clipboard Health Website</p>
+			<h4><strong>Ailo - Software Engineer (20th Sept 2020 to Present)</strong></h4>
+			<p>Working on Ailo Website and Backend</p>
+			<p>- Worked on APIs for Inspection App </p>
+			<p>- Worked on frontend and backend for creating projects for Repairs & Maintenance, Lease Renewal, New Tenancy etc</p>
+			<p>- Integrated REI forms for different forms like Entry Notice and prefill data into the forms</p>
+		</div>
+		<div class="content">
+			<h4><strong>Clipboard Health - Senior Software Developer (7th Dec 2020 to 17th Sept 2020)</strong></h4>
+			<p>Worked Clipboard Health Website</p>
 			<p>- Worked on shift verification tool</p>
 			<p>- Created an in-house software for sending and receiving SMS and Emails</p>
 			<p>- Created tool for bulk shift creation</p>
+			<p>- Integrated payment with stripe</p>
 		</div>
 		<div class="content">
-			<h4><strong>Gambit Sports - Software Development Engineer (June 2019 to Dec 2020)</strong></h4>
+			<h4><strong>Gambit Sports - Software Development Engineer (17th June 2019 to 4th Dec 2020)</strong></h4>
 			<p>Worked on Nostra Pro App.</p>
 			<p>- Developed voucher code functionality with different vendors like Flipkart, PhonePe, Dunzo, and Myntra.</p>
 			<p>- Worked on different payment gateways including Paytm, Cashfree, PhonePe</p>
@@ -83,7 +91,7 @@
 			<p>- Created different SQS queues for handling performance and transaction issues.</p>
 		</div>
 		<div class="content">
-			<h4><strong>Simform Solutions - Full Stack Developer (June 2017 to June 2019)</strong></h4>
+			<h4><strong>Simform Solutions - Full Stack Developer (12th June 2017 to 14th June 2019)</strong></h4>
 			<p>Worked on technologies like: Node.js, Express.js, Sails.js, MongoDB, MySQL, PostgreSQL.</p>
 			<p>- Developed a lambda function that dumps data from DynamoDB to Elasticsearch using Node.js.</p>
 			<p>- Built Payment APIs along with Stripe integration using Node.js.</p>
